src/test/resources/failing/fail54.pnd
@type Animal
foo(x, y) : string, Animal
bar(x) <- foo(@"123", x)
